add heroku environment with postgres as db

--- a/config/database.yml
+++ b/config/database.yml
@@ -18,3 +18,10 @@ production:
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
+
+heroku:
+  adapter: postgresql
+  database: attache
+  pool: 5
+  timeout: 5000
+  
